@@ -1,5 +1,10 @@
 2008-05-28  Sam Steingold  <sds@gnu.org>
 
+	* modules/clx/new-clx/clx.f (last-event-processed)
+	(last-timestamp-processed) [USE_LIBXT]: add
+
+2008-05-28  Sam Steingold  <sds@gnu.org>
+
 	* m4/isc-posix.m4: remove. The comment says:
 	This file is not needed with autoconf-2.53 and newer. Remove it in 2005.
 
